<resources>
    <string name="app_name">ProyectoAndroid_Yuritzy</string>
    <string name="yuu_ritzy">Yuu Ritzy</string>
    <string name="address">¿Compras desde Ciudad de México... CP 5700?</string>
    <string name="enter_your_addess">Ingresa tu direccion para enviarte tu pedido.</string>
    <string name="perfect_gift">El regalo perfecto</string>
    <string name="surprise_box">Caja sorpresa</string>
    <string name="naruto">Naruto</string>
    <string name="sakura">Sakura</string>
    <string name="itachi">Itachi</string>
    <string name="sasuke">Sasuke</string>
    <string name="minato">Minato</string>
    <string name="kakashi">Kakashi</string>
    <string name="buy">COMPRAR</string>
    <string name="favourites">Favoritos</string>
    <string name="my_account">Mi cuenta</string>
    <string name="shopping_cart">Carrito</string>
    <string name="thematic">Caja sorpresa con \ntemática de %s</string>
    <string name="num_reviews">(120)</string>
    <string name="price_initial"><s>$%d</s></string>
    <string name="price_final">$%d</string>
    <string name="price_final_cents">.00</string>
    <string name="discount">%d OFF</string>
    <string name="shipping_time">LLega en 9 días hábiles por $50</string>
    <string name="add_car">Agregar al carrito</string>
    <string name="greeting">Hola, Juanito!</string>
    <string name="my_addresses">Mi dirección</string>
    <string name="my_comments">Mis comentarios</string>
    <string name="my_shopping">Mis compras</string>
    <string name="coupons">Cupones</string>
    <string name="edit_profile">Editar mi  perfil</string>
    <string name="sending">Enviado</string>
    <string name="assistance">Ayuda</string>
    <string name="adress_shipping">Envio a CP ____</string>
    <string name="include">Incluye</string>
    <string name="all">Todo</string>
    <string name="data_shipping">Datos de envío </string>
    <string name="edit_change">Editar o elegir otro</string>
    <string name="payment_method">Método de pago</string>
    <string name="debit_card">Tarjeta de débido </string>
    <string name="credit_card">Tarjeta de crédito</string>
    <string name="transfer">Transferencia electrónica </string>
    <string name="cash">Deposito en efectivo</string>
    <string name="content">
        <li>Funko Pop del personaje</li>\n
        <li>Kunai y Shuriken</li>\n
        <li>Libro de kakashi</li>\n
        <li>Monedero de rana</li>\n
        <li>Cascabeles</li>\n
        <li>Dulce en forma de sharingan</li>\n
        <li>Chocolates de banda y papel bomba</li>\n
        <li>Un bowl de ramen</li>\n
        <li>Pergamino del cielo</li>\n
        <li>Banda Ninja </li>\n
        <li>Stickers </li>\n
        <li>3 bolsas de fritura </li>\n
        <li>Palillos</li>\n
    </string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_checkout">CheckoutActivity</string>

    <string name="no_favorite_products">No hay productos favoritos</string>
    <string name="street">Calle</string>
    <string name="number">Número</string>
    <string name="district">Colonia</string>
    <string name="postal_code">Código Postal</string>
    <string name="municipality">Delegación o Municipio</string>
    <string name="state">Estado</string>
    <string name="country">País</string>
    <string name="change_address">Cambiar direccion</string>
    <string name="edit">Editar</string>

    <string name="take_picture">Tomar foto</string>
    <string name="name">Nombre</string>
    <string name="ready">Listo</string>


</resources>