<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="50dp"
    android:paddingEnd="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:text="@string/data_shipping"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/street"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandmedium"
        android:text="@string/street"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandmedium"
        android:text="@string/number"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/district"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandmedium"
        android:text="@string/district"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/postal_code"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandmedium"
        android:text="@string/postal_code"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/municipality"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandmedium"
        android:text="@string/municipality"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandmedium"
        android:text="@string/state"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/country"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandmedium"
        android:text="@string/country"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:id="@+id/textView_change_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:text="@string/change_address"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

</LinearLayout>