<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingBottom="@dimen/space_xxlarge"
        tools:context=".profile.ProfileFragment">

        <ImageView
            android:id="@+id/imageView_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_xlarge"
            android:scaleType="fitXY"
            android:src="@drawable/yuu_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_large"
            android:fontFamily="@font/quicksandbold"
            android:text="@string/greeting"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

        <TextView
            android:id="@+id/textView_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:drawablePadding="@dimen/space_large"
            android:fontFamily="@font/quicksandmedium"
            android:text="@string/favourites"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:drawableStartCompat="@drawable/ic_favourite_full"
            app:drawableTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

        <TextView
            android:id="@+id/textView_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_xxlarge"
            android:drawablePadding="@dimen/space_large"
            android:fontFamily="@font/quicksandmedium"
            android:text="@string/shopping_cart"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:drawableStartCompat="@drawable/ic_shopping_cart"
            app:drawableTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

        <TextView
            android:id="@+id/textView_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_xxlarge"
            android:drawablePadding="@dimen/space_large"
            android:fontFamily="@font/quicksandmedium"
            android:text="@string/my_addresses"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:drawableStartCompat="@drawable/ic_home"
            app:drawableTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

        <TextView
            android:id="@+id/textView_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_xxlarge"
            android:drawablePadding="@dimen/space_large"
            android:fontFamily="@font/quicksandmedium"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:drawableStartCompat="@drawable/ic_edit"
            app:drawableTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

        <TextView
            android:id="@+id/textView_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_xxlarge"
            android:drawablePadding="@dimen/space_large"
            android:fontFamily="@font/quicksandmedium"
            android:text="@string/assistance"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:drawableStartCompat="@drawable/ic_assistance"
            app:drawableTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    </LinearLayout>

</ScrollView>