<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:paddingBottom="@dimen/space_xxlarge">

    <ImageView
        android:id="@+id/imageView_edit_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_xlarge"
        android:scaleType="fitXY"
        android:src="@drawable/yuu_circle" />

    <TextView
        android:id="@+id/textView_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/space_large"
        android:layout_marginTop="@dimen/space_xlarge"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/take_picture"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_seventy"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageView_profile" />

    <EditText
        android:id="@+id/editText_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_xxlarge"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandmedium"
        android:hint="@string/name"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/quicksandbold"
        android:gravity="center"
        android:padding="@dimen/space_large"
        android:text="@string/ready"
        android:textColor="@color/purple_200"
        android:textSize="18sp" />

</LinearLayout>